# aseta_task_management

./: CMakeLists.txt  TODO  package.xml
action/: PhotoWaypoint.action  PhotographArea.action
include/aseta_task_management/: TaskManager.h  decomposer.h  task_manager.h
include/gatsp/: Euclidean3DProblem.h  GeneticAlgorithm.h  GeneticAlgorithmBase.h  Genome.h  Point.h  Problem.h  ProblemBase.h  Quarternion.h  SolutionBase.h  TraditionalGeneticAlgorithm.h  Waypoint.h
launch/: task_manager.launch
src/: TaskManager.cpp  decomposer.cpp  dummy_drone.cpp  register_task.cpp  task_manager.cpp  task_planner.cpp
src/gatsp/: Euclidean3DProblem.cpp  GeneticAlgorithm.cpp  GeneticAlgorithmBase.cpp  Genome.cpp  Problem.cpp  TraditionalGeneticAlgorithm.cpp  Waypoint.cpp
srv/: Goal.srv  PhotographArea.srv
test/: test_clippoly.cpp  test_decomposer.cpp  test_dummy_drone.cpp  test_dummy_drone.test  test_gatsp.cpp  unit_test.cpp
