<?xml version="1.0"?>
<package>
  <name>aseta_task_management</name>
  <version>0.0.0</version>
  <description>The aseta_task_management package</description>

  <maintainer email="kdh@es.aau.dk">Karl Damkjær Hansen</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://ros.org/wiki/aseta_task_management</url> -->

  <author email="kdh@es.aau.dk">Karl Damkjær Hansen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libclippoly-dev</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libclippoly0</run_depend>
</package>